--- a/src/February2025.css
+++ b/src/February2025.css
@@ -121,7 +121,7 @@
   border:solid 2px whitesmoke;
   background-color:	#C2B280;
   text-align: left;
-  padding:50px 20px 5px 20px;
+  padding:50px 20px 25px 20px;
   margin-top:0%;
   margin-bottom: 5%;
   font-size:1.2rem;
@@ -137,7 +137,7 @@
   text-align: center;
   padding:10px 10px 10px 10px;
   margin-top:3%;
-  margin-bottom:5%;
+  margin-bottom:1%;
   font-size:1.2rem;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-weight: bold;
@@ -162,6 +162,48 @@
   font-weight: bold;
   font-size: 1.2rem;
   color:#f7ca46;
+}
+
+.blogPhotoDivFebruary{
+  display:flex;
+  flex-direction: row;
+  border:solid 2px #757c88;
+  background-color: #C2B280;
+  padding-bottom: 5%;
+  padding-top: 3%;
+  padding-left: 2%;
+  padding-right:2%;
+  margin-top:5vh;
+}
+
+.blogPhotoFebruary img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width:90%;
+  height:auto;
+  border:solid whitesmoke 4px;
+  border-radius: 20%;
+  -webkit-border-radius: 20%;
+  -moz-border-radius: 20%;
+  -ms-border-radius: 20%;
+  -o-border-radius: 20%;
+}
+
+.Februaryfigcaption {
+  text-align: center;
+  font-family: bold;
+  color:black;
+  font-size: 1.0rem;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  overflow-wrap:normal;
+  padding-top:5%;
+}
+
+.LinkFebruary2025 {
+  color:whitesmoke;
+  font-size: 1.2rem;
+  text-decoration: underline;
 }
 
 @media screen and (min-width:480px) and (max-width:900px) { 
