--- a/src/February2025.css
+++ b/src/February2025.css
@@ -208,6 +208,43 @@
   text-decoration: underline;
 }
 
+.slideshowinstructionsFebruary {
+  margin-top:1%;
+  margin-bottom:1%;
+  font-size:1.2rem;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  display: block;
+  color:#687875;
+}
+
+.slideshowentryFebruary {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  pointer-events:none;
+  height:auto;
+  width: 30%;
+  border:solid whitesmoke 4px;
+  border-radius:100%;
+  margin-top:1%;
+  margin-bottom:1%;
+  -webkit-border-radius:100%;
+  -moz-border-radius:100%;
+  -ms-border-radius:100%;
+  -o-border-radius:100%;
+} 
+
+.SlideshowHostPhotoFebruary{
+  display:flex;
+  flex-direction: column;
+  border:solid 2px whitesmoke;
+  background-color:#C2B280;
+  padding-bottom: 2%;
+  padding-top: 2%;    
+  justify-content:center;
+  text-align:center;
+}
+
 @media screen and (min-width:480px) and (max-width:900px) { 
   .snowScene {
     background: linear-gradient(180deg, #a6c0cd 20% , #dde6eb 30% , #f4f4f4 35% 100%); 
@@ -227,7 +264,28 @@
         padding-top: 5%;
         margin-top: 2%;
         }
+
+        .slideshowentryFebruary {
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
+          pointer-events:none;
+          height:auto;
+          width: 40%;
+          border:solid whitesmoke 3px;
+          border-radius:100%;
+          margin-top:3%;
+          margin-bottom:5%;
+          -webkit-border-radius:100%;
+          -moz-border-radius:100%;
+          -ms-border-radius:100%;
+          -o-border-radius:100%;
+        } 
 } 
+
+.tickList {
+  margin-left:5%;
+}
 
 
 @media screen and (max-width:480px) {  
@@ -289,7 +347,7 @@
             pointer-events:none;
             width:65%;
             height:auto;
-            border:solid #1f3613 3px;
+            border:solid whitesmoke 3px;
             border-radius:100%;
             margin-top:3%;
             margin-bottom:5%;
@@ -318,6 +376,34 @@
             height:90vh;
             top:0;
             bottom:0;
+              }
+
+              .slideshowentryFebruary {
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+                pointer-events:none;
+                width:65%;
+                height:auto;
+                border:solid whitesmoke 3px;
+                border-radius:100%;
+                margin-top:3%;
+                margin-bottom:5%;
+                -webkit-border-radius:100%;
+                -moz-border-radius:100%;
+                -ms-border-radius:100%;
+                -o-border-radius:100%;
+              } 
+  
+              .slideshowinstructionsFebruary {
+                margin-top:1%;
+                margin-bottom:2%;
+                padding-right: 10%;
+                padding-left:10%;
+                font-size:1.1rem;
+                font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+                display: block;
+                color:white; 
               }
                   
         }
