--- a/src/March2025.css
+++ b/src/March2025.css
@@ -1,13 +1,332 @@
+.backgroundMarch2025{
+  background-color:#57a788 ;
+  padding-bottom: 50%;
+  
+}
+
 .March2025Header{
-    color:white;
+    color: whitesmoke;
     display:block;
     text-align: center;
-    justify-items: center;
+    justify-items:center;
     font-size: 1.55em;
     font-weight: bold;
     width: 100%;
-    height:100vh;
+    height:20vh;
     position:relative;
-    background-color:#7393B3;
+    background-color:#816c66;
     padding:4%;
 }
+
+*{
+    box-sizing: border-box;
+  }
+  
+  #backbuttonMarch2025{
+    display:block;
+    position:absolute;
+    height:fit-content;
+    width:fit-content;
+    padding:2%;
+    background-color: #f5f5f5 ;
+    border:grey 2px solid;
+    text-align: center;
+    font-size: large;
+    font-weight: bold;
+    color:#636363;
+    top:10%;
+    text-decoration: underline;
+    margin: 1% 25% 10% 75%;
+    border-radius:15%;
+    -webkit-border-radius:15%;
+    -moz-border-radius:15%;
+    -ms-border-radius:15%;
+    -o-border-radius:15%;
+  } 
+  
+  .newsMarch2025{
+    color: whitesmoke;
+    background-color:#816c66;
+    text-align: left;
+    padding:50px 20px 25px 20px;
+    margin-top:3%;
+    margin-bottom: 5%;
+    font-size:1.2rem;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight:bold;
+    width:100%;
+  }
+
+  .dateAllMarch2025{
+    color: whitesmoke;
+    /* border:solid 2px whitesmoke; */
+    background-color:#816c66;
+    text-align: center;
+    padding:10px 10px 10px 10px;
+    margin-top:20%;
+    margin-bottom:1%;
+    font-size:1.2rem;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    width:100%;
+  }
+  
+  .dateMarch2025{
+    color: whitesmoke;
+    /* border:solid 2px whitesmoke; */
+    background-color:#816c66;
+    text-align: center;
+    padding:10px 10px 10px 10px;
+    margin-top:2%;
+    margin-bottom:1%;
+    font-size:1.2rem;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    width:100%;
+  }
+  
+  .newsheaderMarch2025{
+    color: whitesmoke;
+    /* border:solid 2px whitesmoke; */
+    background-color:#816c66;
+    text-align: center;
+    padding:10px 20px 10px 20px;
+    margin-top:0.3%;
+    margin-bottom:2%;
+    font-size:1.2rem;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight:bold;
+    width:100%;
+  }
+  
+  .dateNewsMarch2025{
+    font-weight: bold;
+    font-size: 1.2rem;
+    color:#f7ca46;
+  }
+  
+  .blogPhotoDivMarch2025{
+    display:flex;
+    flex-direction: row;
+    border:solid 2px #757c88;
+    background-color:#816c66;
+    padding-bottom: 2%;
+    padding-top: 3%;
+    padding-left: 2%;
+    padding-right:2%;
+    margin-top:5vh;
+    margin-bottom:5vh;
+  }
+  
+  .blogPhotoMarch2025 img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width:90%;
+    height:auto;
+    border:solid whitesmoke 4px;
+    border-radius: 20%;
+    -webkit-border-radius: 20%;
+    -moz-border-radius: 20%;
+    -ms-border-radius: 20%;
+    -o-border-radius: 20%;
+  }
+  
+  
+  .March2025figcaption {
+    text-align: center;
+    font-family: bold;
+    color:whitesmoke;
+    font-size: 1.0rem;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    overflow-wrap:normal;
+    padding-top:5%;
+  }
+  
+  .LinkMarch2025 {
+    color: whitesmoke;
+    font-size: 1.2rem;
+    text-decoration: underline;
+  }
+  
+  .slideshowinstructionsMarch2025 {
+    margin-top:1%;
+    margin-bottom:1%;
+    font-size:1.2rem;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    display: block;
+    color:#636363;
+  }
+  
+  .slideshowentryMarch2025 {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    pointer-events:none;
+    height:auto;
+    width: 30%;
+    border:solid whitesmoke 4px;
+    border-radius:100%;
+    margin-top:1%;
+    margin-bottom:1%;
+    -webkit-border-radius:100%;
+    -moz-border-radius:100%;
+    -ms-border-radius:100%;
+    -o-border-radius:100%;
+  } 
+  
+  .SlideshowHostPhotoMarch2025{
+    display:flex;
+    flex-direction: column;
+    border:solid 2px var(--whiteSmoke);
+    background-color:#816c66;
+    padding-bottom: 2%;
+    padding-top: 2%;    
+    justify-content:center;
+    text-align:center;
+  }
+  
+  @media screen and (min-width:480px) and (max-width:900px) {  
+        .blogPhotoDivMarch2025{
+          display: flex;
+          flex-direction: column;
+          background-color:#816c66;
+          padding-bottom: 5%;
+          padding-top: 5%;
+          margin-top: 2%;
+          }
+  
+          .slideshowentryMarch2025{
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            pointer-events:none;
+            height:auto;
+            width: 40%;
+            border:solid var(--whiteSmoke) 3px;
+            border-radius:100%;
+            margin-top:3%;
+            margin-bottom:5%;
+            -webkit-border-radius:100%;
+            -moz-border-radius:100%;
+            -ms-border-radius:100%;
+            -o-border-radius:100%;
+          } 
+  } 
+  
+  @media screen and (max-width:480px) {  
+    /*To ensure on mobile screens below 480px width (this includes one plus phones) that relevant components of 
+    the site are displayed with the best dimensions for the smaller devices*/
+    .March2025header {
+      display:block;
+      text-align: center;
+      font-size: 1.75em;
+      font-weight: bold;
+      width: 100vw;
+      height:15vh;
+      position:relative;
+      background-color:#816c66;
+      overflow-x: hidden;
+        } 
+  
+        .dateMarch2025{
+          color: whitesmoke;
+          border:solid 2px var(--whiteSmoke);
+          background-color:#816c66;
+          text-align: center;
+          padding:10px 10px 10px 10px;
+          margin-top:1%;
+          margin-bottom:1%;
+          font-size:1.2rem;
+          font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+          font-weight: bold;
+          width:100%;
+        }
+  
+        .newsMarch2025{
+          color: whitesmoke;
+          border:solid 2px var(--whiteSmoke);
+          background-color:	#816c66;
+          text-align: left;
+          padding:20px 10% 20px 10%;
+          margin-top:2%;
+          margin-bottom: 0%;
+          font-size:1.0rem;
+          font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+          font-weight:bold;
+          width:100%;
+        }
+  
+        .blogPhotoDivMarch2025{
+            display: flex;
+            flex-direction: column;
+            background-color:#816c66;
+            padding-bottom: 5%;
+            padding-top: 5%;
+            margin-top: 2%;
+            }
+        
+            .slideshowentryMarch2025 {
+              display: block;
+              margin-left: auto;
+              margin-right: auto;
+              pointer-events:none;
+              width:65%;
+              height:auto;
+              border:solid var(--whiteSmoke) 3px;
+              border-radius:100%;
+              margin-top:3%;
+              margin-bottom:5%;
+              -webkit-border-radius:100%;
+              -moz-border-radius:100%;
+              -ms-border-radius:100%;
+              -o-border-radius:100%;
+            } 
+  
+            .slideshowinstructionsMarch2025 {
+              margin-top:1%;
+              margin-bottom:2%;
+              padding-right: 10%;
+              padding-left:10%;
+              font-size:1.1rem;
+              font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+              display: block;
+              color:white; 
+            }
+    
+                .slideshowentryMarch2025 {
+                  display: block;
+                  margin-left: auto;
+                  margin-right: auto;
+                  pointer-events:none;
+                  width:65%;
+                  height:auto;
+                  border:solid var(--whiteSmoke) 3px;
+                  border-radius:100%;
+                  margin-top:3%;
+                  margin-bottom:5%;
+                  -webkit-border-radius:100%;
+                  -moz-border-radius:100%;
+                  -ms-border-radius:100%;
+                  -o-border-radius:100%;
+                } 
+    
+                .slideshowinstructionsMarch2025 {
+                  margin-top:1%;
+                  margin-bottom:2%;
+                  padding-right: 10%;
+                  padding-left:10%;
+                  font-size:1.1rem;
+                  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+                  display: block;
+                  color:white; 
+                }
+                    
+          }
+        
+  
+  
+  
+  
+  
+  
