--- a/src/March2025.css
+++ b/src/March2025.css
@@ -153,7 +153,7 @@
   .slideshowinstructionsMarch2025 {
     margin-top:1%;
     margin-bottom:1%;
-    font-size:1.2rem;
+    font-size:1.3rem;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     display: block;
     color:whitesmoke;
@@ -166,16 +166,16 @@
     margin-right: auto;
     pointer-events:none;
     height:auto;
-    width: 30%;
+    width: 15%;
     border:solid whitesmoke 4px;
-    border-radius:100%;
+    border-radius:70%;
     margin-top:1%;
     margin-bottom:1%;
-    -webkit-border-radius:100%;
-    -moz-border-radius:100%;
-    -ms-border-radius:100%;
-    -o-border-radius:100%;
-  } 
+    -webkit-border-radius:70%;
+    -moz-border-radius:70%;
+    -ms-border-radius:70%;
+    -o-border-radius:70%;
+} 
   
   .SlideshowHostPhotoMarch2025{
     display:flex;
@@ -187,6 +187,54 @@
     justify-content:center;
     text-align:center;
   }
+
+  .datenewsDivMarch2025{
+    background-color: "#816c66";
+    display:flex;
+    flex-direction:column;
+    margin-top: 0vh;
+    margin-bottom:0vh;
+    padding-top: 5vh;
+    padding-bottom:5vh;
+}
+
+.DailyNarrativeMarch2025{
+  background-color: #f2e3d6	;
+  text-Align:left;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  padding-right: 10%;
+  padding-left:10%;
+  color:whitesmoke;
+  font-size:1.0rem;
+  font-family:'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
+  }
+
+  .componentWalkDetailsarch2025{
+    background-color: #f2e3d6	;
+    /* border:solid 4px grey; */
+    text-Align:center;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    padding-right:2%;
+    color:whitesmoke;
+    display:flex;
+    flex-direction:column;
+    font-size:1.0rem;
+    font-family:'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
+    }
+    
+    .titlesMarch2025{
+      color:whitesmoke;
+      font-size:1.2rem;
+    }
+    
+    .headTitlesMarch2025{
+      color:whitesmoke;
+      font-size:1.2rem; 
+      text-decoration: underline;
+      padding-left:10%;
+    }
   
   @media screen and (min-width:480px) and (max-width:900px) {  
         .blogPhotoDivMarch2025{
@@ -204,15 +252,10 @@
             margin-right: auto;
             pointer-events:none;
             height:auto;
-            width: 40%;
+            width: 20%;
             border:solid var(--whiteSmoke) 3px;
-            border-radius:100%;
             margin-top:3%;
             margin-bottom:5%;
-            -webkit-border-radius:100%;
-            -moz-border-radius:100%;
-            -ms-border-radius:100%;
-            -o-border-radius:100%;
           } 
   } 
   
@@ -267,23 +310,6 @@
             padding-top: 5%;
             margin-top: 2%;
             }
-        
-            .slideshowentryMarch2025 {
-              display: block;
-              margin-left: auto;
-              margin-right: auto;
-              pointer-events:none;
-              width:65%;
-              height:auto;
-              border:solid var(--whiteSmoke) 3px;
-              border-radius:100%;
-              margin-top:3%;
-              margin-bottom:5%;
-              -webkit-border-radius:100%;
-              -moz-border-radius:100%;
-              -ms-border-radius:100%;
-              -o-border-radius:100%;
-            } 
   
             .slideshowinstructionsMarch2025 {
               margin-top:1%;
@@ -296,22 +322,17 @@
               color:white; 
             }
     
-                .slideshowentryMarch2025 {
-                  display: block;
-                  margin-left: auto;
-                  margin-right: auto;
-                  pointer-events:none;
-                  width:65%;
-                  height:auto;
-                  border:solid var(--whiteSmoke) 3px;
-                  border-radius:100%;
-                  margin-top:3%;
-                  margin-bottom:5%;
-                  -webkit-border-radius:100%;
-                  -moz-border-radius:100%;
-                  -ms-border-radius:100%;
-                  -o-border-radius:100%;
-                } 
+            .slideshowentryMarch2025{
+              display: block;
+              margin-left: auto;
+              margin-right: auto;
+              pointer-events:none;
+              height:auto;
+              width: 50%;
+              border:solid var(--whiteSmoke) 3px;
+              margin-top:3%;
+              margin-bottom:5%;
+            } 
     
                 .slideshowinstructionsMarch2025 {
                   margin-top:1%;
