--- a/src/April2025.css
+++ b/src/April2025.css
@@ -51,8 +51,8 @@
     background-color:#8bb285;
     display:flex;
     flex-direction:column;
-    margin-top: 2%;
-    margin-bottom:0;
+    margin-top: 1%;
+    margin-bottom:1%;
     padding-top: 10%;
     padding-bottom:5%;
   }
@@ -63,7 +63,7 @@
     display:flex;
     flex-direction:column;
     margin-top: -10%;
-    margin-bottom:0;
+    margin-bottom:5%;
     padding-top: 10%;
     padding-bottom:5%;
   }
@@ -116,7 +116,7 @@
       width:400vw;
       x:-50px;
       y:480px;
-      height:2500px;
+      height:2000px;
       
     } 
   
