--- a/src/April2025.css
+++ b/src/April2025.css
@@ -47,17 +47,17 @@
   }
   
   .datenewsDivApril2025{
-    border:solid #757c88 4px;
+   
     background-color:#8bb285;
     display:flex;
     flex-direction:column;
-    margin-top: 1%;
-    margin-bottom:1%;
+    margin-top: 0%;
+    margin-bottom:0%;
     padding-top: 10%;
-    padding-bottom:5%;
+    padding-bottom:1%;
   }
 
-  .datenewsDivAprilHeader2025{
+  /* .datenewsDivAprilHeader2025{
     border:solid #757c88 4px;
     background-color:#8bb285;
     display:flex;
@@ -66,7 +66,7 @@
     margin-bottom:5%;
     padding-top: 10%;
     padding-bottom:5%;
-  }
+  } */
   
   .dateApril2025{
     color:#36454F;
@@ -108,7 +108,7 @@
     text-align: left;
     padding:10px 10px 20px 10px;
     margin:3%;
-    font-size:1.0rem;
+    font-size:1.1rem;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
 
@@ -119,7 +119,6 @@
       height:2000px;
       
     } 
-  
   
   .blogPhotoDivApril2025{
     display:flex;
@@ -204,7 +203,34 @@
         overflow-wrap:normal;
         padding:5%;
       }
-  
+
+      .titlesApril2025{
+        font-size:1.1rem;
+        font-family: bold;
+        color:#36454F;
+        padding-left: 10%;
+        padding-right: 10%;
+      }
+      
+      .headTitlesApril2025{
+        font-family: bold;
+        color:#36454F;
+        font-size:1.2rem; 
+        text-decoration: underline;
+        padding-left:10%;
+        
+      }
+
+      .largerFont {
+        font-size: 1.2rem;
+      }
+
+      hwpIntroListApril2025{
+        font-size:1.2rem;
+          padding-left: 10%;
+          list-style-type: none;
+      }
+
       /*To ensure on laptops that the sheep are not submerged into the ground*/
   @media screen and (min-width:901px) and (max-width:1600px){
     #swaledaleSheep1{ transform: translate(-200px,0px); -webkit-transform: translate(-200px,0px); -moz-transform: translate(-200px,0px); -ms-transform: translate(-200px,0px); -o-transform: translate(-200px,0px); overflow: visible;
