--- a/src/May2025.css
+++ b/src/May2025.css
@@ -137,7 +137,8 @@
   padding: 10px 10px 10px 10px;
   margin: 5px;
   font-size: 1.2rem;
-  font-weight: Calibri, Trebuchet MS, sans-serif;
+  font-weight: bold;
+  font-family: Calibri, Trebuchet MS, sans-serif;
 }
 
 .newsHeaderMay2025 {
@@ -150,7 +151,7 @@
   margin-bottom: 5px;
   margin-left: auto;
   margin-right: auto;
-  font-size: 1.1rem;
+  font-size: 1.2rem;
   font-weight: bold;
   font-family: Calibri, Trebuchet MS, sans-serif;
 }
