--- a/src/june2025.css
+++ b/src/june2025.css
@@ -11,7 +11,7 @@
 
 .monthHeaderJune2025 {
   margin-top: 2%;
-  margin-bottom: 2%;
+  margin-bottom: 5%;
 }
 
 .headerPhotoJune2025 {
@@ -19,11 +19,11 @@
   pointer-events: none;
   border: #6b7a8f solid 3px;
   margin-top: 5%;
-  -webkit-transform: scale(2);
-  -moz-transform: scale(2);
-  -ms-transform: scale(2);
-  -o-transform: scale(2);
-  transform: scale(2);
+  -webkit-transform: scale(1.9);
+  -moz-transform: scale(1.9);
+  -ms-transform: scale(1.9);
+  -o-transform: scale(1.9);
+  transform: scale(1.9);
 }
 
 #backbuttonJune2025 {
@@ -69,11 +69,11 @@
   width: 400px;
   height: 200px;
   margin: 50px auto 0;
-  -webkit-transform: scale(0.7);
-  -moz-transform: scale(0.7);
-  -ms-transform: scale(0.7);
-  -o-transform: scale(0.7);
-  transform: scale(0.7);
+  -webkit-transform: translate(0%, -8%) scale(0.7);
+  -moz-transform: translate(0%, -8%) scale(0.7);
+  -ms-transform: translate(0%, -8%) scale(0.7);
+  -o-transform: translate(0%, -8%) scale(0.7);
+  transform: translate(0%, -8%) scale(0.7);
 }
 
 .move {
@@ -127,5 +127,542 @@
   }
   to {
     background-position: -400px -1200px;
+  }
+}
+
+/*Instructions for text and news parts of the blog page*/
+.datenewsDivJune2025 {
+  background-color: #2e6f40;
+  display: flex;
+  flex-direction: column;
+  margin-top: 0%;
+  margin-bottom: 0%;
+  padding-top: 10%;
+  padding-bottom: 1%;
+}
+
+.dateJune2025 {
+  color: #22311d;
+  border: solid 3px #22311d;
+  background-color: #cbbd93;
+  text-align: center;
+  padding: 10px 10px 10px 10px;
+  margin: 5px;
+  font-size: 1.2rem;
+  font-family: Calibri, Trebuchet MS, sans-serif;
+  font-weight: bold;
+}
+
+.newsHeaderJune2025 {
+  color: #22311d;
+  border: solid 3px #22311d;
+  background-color: #cbbd93;
+  text-align: center;
+  padding: 10px 3% 20px 30px;
+  margin-top: 3%;
+  margin-bottom: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 1.2rem;
+  font-weight: bold;
+  font-family: Calibri, Trebuchet MS, sans-serif;
+}
+
+.newsJune2025 {
+  color: #22311d;
+  border: solid 3px #22311d;
+  background-color: #cbbd93;
+  text-align: left;
+  padding: 10px 10px 20px 10px;
+  margin: 3%;
+  font-size: 1.1rem;
+  font-weight: bold;
+  font-family: Calibri, Trebuchet MS, sans-serif;
+  padding: 3%;
+}
+
+.blogPhotoDivJune2025 {
+  display: flex;
+  flex-direction: row;
+  border: solid 2px #22311d;
+  background-color: #cbbd93;
+  padding-bottom: 2%;
+  padding-top: 3%;
+  padding-left: 2%;
+  padding-right: 2%;
+  margin-top: 5vh;
+  margin-bottom: 5vh;
+  width: 100%;
+}
+
+.blogPhotoJune2025 img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 75%;
+  height: auto;
+  border: solid #22311d 4px;
+  -webkit-border-radius: 20%;
+  -moz-border-radius: 20%;
+  -ms-border-radius: 20%;
+  -o-border-radius: 20%;
+  border-radius: 20%;
+}
+
+.june2025FigCaption {
+  text-align: center;
+  font-family: bold;
+  color: #22311d;
+  font-size: 1.1rem;
+  font-family: Calibri, Trebuchet MS, sans-serif;
+  overflow-wrap: normal;
+  padding-top: 5%;
+}
+
+.slideshowinstructionsJune2025 {
+  margin-top: 1%;
+  margin-bottom: 1%;
+  font-size: 1.1rem;
+  font-family: Calibri, Trebuchet MS, sans-serif;
+  display: block;
+  color: #22311d;
+  background-color: #cbbd93;
+}
+
+.slideshowentryJune2025 {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  pointer-events: none;
+  height: auto;
+  width: 70%;
+  border: solid #22311d 4px;
+  margin-top: 1%;
+  margin-bottom: 1%;
+  -webkit-border-radius: 70%;
+  -moz-border-radius: 70%;
+  -ms-border-radius: 70%;
+  -o-border-radius: 70%;
+  border-radius: 70%;
+}
+
+.SlideshowHostPhotoJune2025 {
+  display: flex;
+  flex-direction: column;
+  border: solid 3px #22311d;
+  background-color: #cbbd93;
+  padding-bottom: 2%;
+  padding-top: 2%;
+  margin-right: auto;
+  margin-left: auto;
+  justify-content: center;
+  text-align: center;
+}
+
+@media screen and (min-width: 1200px) and (min-height: 900px) {
+  /*To ensure on mobile screens between above 1200px in width and above 900px height that relevant components 
+  of the site are displayed with the best dimensions for the device*/
+
+  .headerPhotoJune2025 {
+    margin-top: -20%;
+    -webkit-transform: scale(1.6);
+    -moz-transform: scale(1.6);
+    -ms-transform: scale(1.6);
+    -o-transform: scale(1.6);
+    transform: scale(1.6);
+  }
+
+  .monthHeaderJune2025 {
+    margin-top: 10%;
+    margin-bottom: 10%;
+  }
+
+  .catWalking {
+    width: 400px;
+    height: 200px;
+    margin: 50px auto 0;
+    -webkit-transform: translate(0%, -212%) scale(0.6);
+    -moz-transform: translate(0%, -212%) scale(0.6);
+    -ms-transform: translate(0%, -212%) scale(0.6);
+    -o-transform: translate(0%, -212%) scale(0.6);
+    transform: translate(0%, -212%) scale(0.6);
+  }
+
+  @keyframes move-animation {
+    from {
+      top: -181%;
+      margin-left: 100%;
+    }
+    to {
+      top: -180%;
+      margin-left: -100%;
+    }
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 900px) and (min-height: 1101px) {
+  /*To ensure on mobile screens between 480px and 900px width and up to 1100px height (this includes ipads) that relevant components 
+  of the site are displayed with the best dimensions for the device*/
+
+  .headerPhotoJune2025 {
+    margin-top: -50%;
+    -webkit-transform: scale(0.8);
+    -moz-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    -o-transform: scale(0.8);
+    transform: scale(0.8);
+  }
+
+  .monthHeaderJune2025 {
+    margin-top: 10%;
+    margin-bottom: 10%;
+  }
+
+  .catWalking {
+    width: 400px;
+    height: 200px;
+    margin: 50px auto 0;
+    -webkit-transform: translate(0%, -390%) scale(0.4);
+    -moz-transform: translate(0%, -390%) scale(0.4);
+    -ms-transform: translate(0%, -390%) scale(0.4);
+    -o-transform: translate(0%, -390%) scale(0.4);
+    transform: translate(0%, -390%) scale(0.4);
+  }
+
+  @keyframes move-animation {
+    from {
+      top: -181%;
+      margin-left: 100%;
+    }
+    to {
+      top: 180%;
+      margin-left: -100%;
+    }
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 900px) and (max-height: 1100px) {
+  /*To ensure on mobile screens between 480px and 900px width and up to 1100px height (this includes ipads) that relevant components 
+  of the site are displayed with the best dimensions for the device*/
+
+  .headerPhotoJune2025 {
+    margin-top: -50%;
+    -webkit-transform: scale(0.8);
+    -moz-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    -o-transform: scale(0.8);
+    transform: scale(0.8);
+  }
+
+  .monthHeaderJune2025 {
+    margin-top: 10%;
+    margin-bottom: 10%;
+  }
+
+  .catWalking {
+    width: 400px;
+    height: 200px;
+    margin: 50px auto 0;
+    -webkit-transform: translate(0%, -346%) scale(0.4);
+    -moz-transform: translate(0%, -346%) scale(0.4);
+    -ms-transform: translate(0%, -346%) scale(0.4);
+    -o-transform: translate(0%, -346%) scale(0.4);
+    transform: translate(0%, -346%) scale(0.4);
+  }
+
+  @keyframes move-animation {
+    from {
+      margin-left: 100%;
+    }
+    to {
+      margin-left: -100%;
+    }
+  }
+}
+
+@media screen and (min-width: 401px) and (max-width: 480px) and (min-height: 900px) {
+  /*To ensure on mobile screens below between 401px and 480px width and height 900px and above that relevant components 
+  of the site are displayed with the best dimensions for the smaller devices*/
+
+  .headerPhotoJune2025 {
+    margin-top: -30%;
+    -webkit-transform: scale(0.5);
+    -moz-transform: scale(0.5);
+    -ms-transform: scale(0.5);
+    -o-transform: scale(0.5);
+    transform: scale(0.5);
+  }
+
+  .monthHeaderJune2025 {
+    margin-top: 15%;
+    margin-bottom: 15%;
+  }
+
+  .catWalking {
+    width: 400px;
+    height: 200px;
+    margin: 50px auto 0;
+    -webkit-transform: translate(0, -280%) scale(0.3);
+    -moz-transform: translate(0, -280%) scale(0.3);
+    -ms-transform: translate(0, -280%) scale(0.3);
+    -o-transform: translate(0, -280%) scale(0.3);
+    transform: translate(0, -280%) scale(0.3);
+  }
+
+  @keyframes move-animation {
+    from {
+      top: -151%;
+      margin-left: 100%;
+    }
+    to {
+      top: 150%;
+      margin-left: -100%;
+    }
+  }
+}
+
+@media screen and (min-width: 401px) and (max-width: 480px) and (max-height: 899px) {
+  /*To ensure on mobile screens below between 401px and S480px width (this includes one plus phones) that relevant components 
+  of the site are displayed with the best dimensions for the smaller devices*/
+
+  .headerPhotoJune2025 {
+    margin-top: -30%;
+    -webkit-transform: scale(0.5);
+    -moz-transform: scale(0.5);
+    -ms-transform: scale(0.5);
+    -o-transform: scale(0.5);
+    transform: scale(0.5);
+  }
+
+  .monthHeaderJune2025 {
+    margin-top: 15%;
+    margin-bottom: 15%;
+  }
+
+  .catWalking {
+    width: 400px;
+    height: 200px;
+    margin: 50px auto 0;
+    -webkit-transform: translate(0, -273%) scale(0.3);
+    -moz-transform: translate(0, -273%) scale(0.3);
+    -ms-transform: translate(0, -273%) scale(0.3);
+    -o-transform: translate(0, -273%) scale(0.3);
+    transform: translate(0, -273%) scale(0.3);
+  }
+
+  @keyframes move-animation {
+    from {
+      top: -151%;
+      margin-left: 100%;
+    }
+    to {
+      top: 150%;
+      margin-left: -100%;
+    }
+  }
+}
+
+@media screen and (min-width: 380px) and (max-width: 400px) {
+  /*To ensure on mobile screens below between 380px and 400px width (this includes one plus phones) that relevant components 
+  of the site are displayed with the best dimensions for the smaller devices*/
+
+  .headerPhotoJune2025 {
+    margin-top: -50%;
+    -webkit-transform: scale(0.5);
+    -moz-transform: scale(0.5);
+    -ms-transform: scale(0.5);
+    -o-transform: scale(0.5);
+    transform: scale(0.5);
+  }
+
+  .monthHeaderJune2025 {
+    margin-top: 15%;
+    margin-bottom: 15%;
+  }
+
+  .catWalking {
+    width: 400px;
+    height: 200px;
+    margin: 50px auto 0;
+    -webkit-transform: translate(0%, -293%) scale(0.3);
+    -moz-transform: translate(0%, -293%) scale(0.3);
+    -ms-transform: translate(0%, -293%) scale(0.3);
+    -o-transform: translate(0%, -293%) scale(0.3);
+    transform: translate(0%, -293%) scale(0.3);
+  }
+
+  @keyframes move-animation {
+    from {
+      top: -91%;
+      margin-left: 100%;
+    }
+    to {
+      top: 90%;
+      margin-left: -100%;
+    }
+  }
+}
+
+@media screen and (min-width: 359px) and (max-width: 379px) and (min-height: 799px) and (max-height: 899px) {
+  /*To ensure on mobile screens below between 359px and 379px width and min-height:799px and max-height: 899px  (this includes one plus phones) that relevant components 
+  of the site are displayed with the best dimensions for the smaller devices*/
+
+  .headerPhotoJune2025 {
+    margin-top: -50%;
+    -webkit-transform: scale(0.5);
+    -moz-transform: scale(0.5);
+    -ms-transform: scale(0.5);
+    -o-transform: scale(0.5);
+    transform: scale(0.5);
+  }
+
+  .monthHeaderJune2025 {
+    margin-top: 15%;
+    margin-bottom: 15%;
+  }
+
+  .catWalking {
+    width: 400px;
+    height: 200px;
+    margin: 50px auto 0;
+    -webkit-transform: translate(0%, -257%) scale(0.3);
+    -moz-transform: translate(0%, -257%) scale(0.3);
+    -ms-transform: translate(0%, -257%) scale(0.3);
+    -o-transform: translate(0%, -257%) scale(0.3);
+    transform: translate(0%, -257%) scale(0.3);
+  }
+
+  @keyframes move-animation {
+    from {
+      top: -91%;
+      margin-left: 100%;
+    }
+    to {
+      top: 90%;
+      margin-left: -100%;
+    }
+  }
+}
+
+@media screen and (min-width: 359px) and (max-width: 379px) and (min-height: 698px) and (max-height: 798px) {
+  /*To ensure on mobile screens below between 359px and 379px width and min-height:650px and max-height: 798px  (this includes one plus phones) that relevant components 
+  of the site are displayed with the best dimensions for the smaller devices*/
+
+  .headerPhotoJune2025 {
+    margin-top: -50%;
+    -webkit-transform: scale(0.5);
+    -moz-transform: scale(0.5);
+    -ms-transform: scale(0.5);
+    -o-transform: scale(0.5);
+    transform: scale(0.5);
+  }
+
+  .monthHeaderJune2025 {
+    margin-top: 15%;
+    margin-bottom: 15%;
+  }
+
+  .catWalking {
+    width: 400px;
+    height: 200px;
+    margin: 50px auto 0;
+    -webkit-transform: translate(0%, -247%) scale(0.3);
+    -moz-transform: translate(0%, -247%) scale(0.3);
+    -ms-transform: translate(0%, -247%) scale(0.3);
+    -o-transform: translate(0%, -247%) scale(0.3);
+    transform: translate(0%, -247%) scale(0.3);
+  }
+
+  @keyframes move-animation {
+    from {
+      top: -91%;
+      margin-left: 100%;
+    }
+    to {
+      top: 90%;
+      margin-left: -100%;
+    }
+  }
+}
+
+@media screen and (min-width: 359px) and (max-width: 379px) and (min-height: 600px) and (max-height: 697px) {
+  /*To ensure on mobile screens below between 359px and 379px width and min-height:600px and max-height: 697px  (this includes one plus phones) that relevant components 
+  of the site are displayed with the best dimensions for the smaller devices*/
+
+  .headerPhotoJune2025 {
+    margin-top: -50%;
+    -webkit-transform: scale(0.6);
+    -moz-transform: scale(0.6);
+    -ms-transform: scale(0.6);
+    -o-transform: scale(0.6);
+    transform: scale(0.6);
+  }
+
+  .monthHeaderJune2025 {
+    margin-top: 15%;
+    margin-bottom: 15%;
+  }
+
+  .catWalking {
+    width: 400px;
+    height: 200px;
+    margin: 50px auto 0;
+    -webkit-transform: translate(0%, -248%) scale(0.3);
+    -moz-transform: translate(0%, -248%) scale(0.3);
+    -ms-transform: translate(0%, -248%) scale(0.3);
+    -o-transform: translate(0%, -248%) scale(0.3);
+    transform: translate(0%, -248%) scale(0.3);
+  }
+
+  @keyframes move-animation {
+    from {
+      top: -91%;
+      margin-left: 100%;
+    }
+    to {
+      top: 90%;
+      margin-left: -100%;
+    }
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 358px) {
+  /*To ensure on mobile screens below between 320px and 358px width that relevant components 
+  of the site are displayed with the best dimensions for the smaller devices*/
+
+  .headerPhotoJune2025 {
+    margin-top: -50%;
+    -webkit-transform: scale(0.6);
+    -moz-transform: scale(0.6);
+    -ms-transform: scale(0.6);
+    -o-transform: scale(0.6);
+    transform: scale(0.6);
+  }
+
+  .monthHeaderJune2025 {
+    margin-top: 15%;
+    margin-bottom: 15%;
+  }
+
+  .catWalking {
+    width: 400px;
+    height: 200px;
+    margin: 50px auto 0;
+    -webkit-transform: translate(0%, -265%) scale(0.3);
+    -moz-transform: translate(0%, -265%) scale(0.3);
+    -ms-transform: translate(0%, -265%) scale(0.3);
+    -o-transform: translate(0%, -265%) scale(0.3);
+    transform: translate(0%, -265%) scale(0.3);
+  }
+
+  @keyframes move-animation {
+    from {
+      top: -91%;
+      margin-left: 100%;
+    }
+    to {
+      top: 90%;
+      margin-left: -100%;
+    }
   }
 }
